[workspace]
members = [
    "lib",
    "binlib",
    "part1-1",
    "part1-2",
    "part1-3",
    "part1-4",
    "part1-5",
    "part1-6",
    "part1-7",
    "part1-8",
    "part1-9",
    "part1-10",
    "final1",
    "part2-1",
    "part2-2",
    "part2-3",
    "part2-4",
    "part2-5",
    "part2-6",
    "part2-7",
    "part2-8",
    "part2-9",
    "part2-10",
    "part2-11",
    "part2-12",
    "part2-13",
    "part2-14",
    "final2",
    "exp1",
    "exp2",
]
resolver = "2"

[profile.release]
debug = true
lto = true
