cargo-features = ["profile-rustflags"]

[workspace]
members = [
    "raytracer_lib",
    "binlib",
    "part1/part1-1",
    "part1/part1-2",
    "part1/part1-3",
    "part1/part1-4",
    "part1/part1-5",
    "part1/part1-6",
    "part1/part1-7",
    "part1/part1-8",
    "part1/part1-9",
    "part1/part1-10",
    "final1",
    "part2/part2-1",
    "part2/part2-2",
    "part2/part2-3",
    "part2/part2-4",
    "part2/part2-5",
    "part2/part2-6",
    "part2/part2-7",
    "part2/part2-8",
    "part2/part2-9",
    "part2/part2-10",
    "part2/part2-11",
    "part2/part2-12",
    "part2/part2-13",
    "part2/part2-14",
    "final2",
    "exp/exp1",
    "exp/exp2",
    "exp/exp3",
    "exp/exp4",
    "exp/exp5",
    "exp/exp6",
    "exp/exp7",
    "exp/exp8",
    "exp/exp9",
]
resolver = "2"

[profile.dev]
# Use r64 floats for dev build
rustflags = ["-Ctarget-cpu=native", "--cfg", "float=\"r64\"", "--check-cfg", "cfg(float, values(any()))"]

[profile.release]
debug = true
# Use r64 floats for release build
rustflags = ["-Ctarget-cpu=native", "--cfg", "float=\"r64\"", "--check-cfg", "cfg(float, values(any()))"]

[profile.test]
# Use r64 floats for test build
rustflags = ["-Ctarget-cpu=native", "--cfg", "float=\"r64\"", "--check-cfg", "cfg(float, values(any()))"]

# -- Custom profiles --

# Release build with f64 bit floats
[profile.release-f64]
inherits = "release"
rustflags = ["-Ctarget-cpu=native", "--cfg", "float=\"f64\"", "--check-cfg", "cfg(float, values(any()))"]

# Release build with LTO
[profile.release-lto]
inherits = "release-f64"
lto = true

# Dev build with R32 floats
[profile.dev-r32]
inherits = "dev"
rustflags = ["-Ctarget-cpu=native", "--cfg", "float=\"r32\"", "--check-cfg", "cfg(float, values(any()))"]

# Release build with f32 floats
[profile.release-f32]
inherits = "release"
rustflags = ["-Ctarget-cpu=native", "--cfg", "float=\"f32\"", "--check-cfg", "cfg(float, values(any()))"]

# Release build with r32 bit floats
[profile.release-r32]
inherits = "release"
rustflags = ["-Ctarget-cpu=native", "--cfg", "float=\"r32\"", "--check-cfg", "cfg(float, values(any()))"]
