[package]
name = "binlib"
version = "0.1.0"
edition = "2021"

[dependencies]
raytracer_lib = { path = "../raytracer_lib" }
clap = { version = "4.5.7", features = ["derive"] }
minifb = "0.27.0"
image = "0.25.1"
# using git because 1.0.0 is async only
simple-process-stats = { git = "https://github.com/robotty/simple-process-stats" }
atty = "0.2.14"
